# Q-A

./: .env.example  README.md  main.py  pyproject.toml
voice_qa/: README.md  app.py  loaders.py  qa_chain.py  requirements.txt  voice_io.py
